import font style from Google and apply it to header

--- a/css/styles.css
+++ b/css/styles.css
@@ -6,5 +6,6 @@ img{
 #header{
   text-align: center;
   font-size: 30pt;
+  font-family: 'Rubik Mono One', sans-serif;
   background-color: #b3b3b3
 }
