--- a/css/styles.css
+++ b/css/styles.css
@@ -3,9 +3,10 @@ img{
   display: block;
 }
 
-#header{
+header{
   text-align: center;
   font-size: 30pt;
   font-family: 'Rubik Mono One', sans-serif;
-  background-color: #b3b3b3
+  background-color: #b3b3b3;
+
 }
