add css properties margin, border, padding, float, width, and height to center image of me in header

--- a/css/styles.css
+++ b/css/styles.css
@@ -13,4 +13,10 @@ header{
 #me{
   border-radius: 30%;
   display: block;
+  margin: auto;
+  border: 25%;
+  padding: 10;
+  width: 25%%;
+  height: auto;
+  float: inherit;
 }
